k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-producer
  labels:
    app: book-producer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-producer
  template:
    metadata:
      labels:
        app: book-producer
    spec:
      containers:
      - name: book-producer
        image: book-producer:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
