k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-producer-service
spec:
  selector:
    app: book-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
